Terminado el nav principal, ahora a ver si implemento la visualización de las ventas